Fix newsletter wrapping on 1080p

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -213,7 +213,7 @@ header img {
 
 #substack-feed-embed {
     text-align: left;
-    width: 75%;
+    width: 80%;
 }
 
 #substack-feed-embed a {
